tests/ui/impl-trait/recursive-impl-trait-type-indirect.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:6:22
   |
LL | fn option(i: i32) -> impl Sized {
   |                      ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:11:15
   |
LL | fn tuple() -> impl Sized {
   |               ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:16:15
   |
LL | fn array() -> impl Sized {
   |               ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:21:13
   |
LL | fn ptr() -> impl Sized {
   |             ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:26:16
   |
LL | fn fn_ptr() -> impl Sized {
   |                ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:31:25
   |
LL | fn closure_capture() -> impl Sized {
   |                         ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:39:29
   |
LL | fn closure_ref_capture() -> impl Sized {
   |                             ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:47:21
   |
LL | fn closure_sig() -> impl Sized {
   |                     ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:52:23
   |
LL | fn coroutine_sig() -> impl Sized {
   |                       ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:57:27
   |
LL | fn coroutine_capture() -> impl Sized {
   |                           ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:68:35
   |
LL | fn substs_change<T: 'static>() -> impl Sized {
   |                                   ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:78:26
   |
LL | fn mutual_recursion() -> impl Sync {
   |                          ^^^^^^^^^ recursive opaque type
LL |
LL |     mutual_recursion_b()
   |     -------------------- returning here with type `impl Sized`
...
LL | fn mutual_recursion_b() -> impl Sized {
   |                            ---------- returning this opaque type `impl Sized`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:83:28
   |
LL | fn mutual_recursion() -> impl Sync {
   |                          --------- returning this opaque type `impl Sync`
...
LL | fn mutual_recursion_b() -> impl Sized {
   |                            ^^^^^^^^^^ recursive opaque type
LL |
LL |     mutual_recursion()
   |     ------------------ returning here with type `impl Sync`

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0720`.
